<?xml version="1.0"?>
<package>
  <name>siemens_cp1616</name>
  <version>1.0.0</version>
  <description>
    
    The siemens_cp1616 is a package that allows the ROS user to communicate with Profinet IO devices 
    using PCI communication card CP1616. The package itself wraps the functions of the IO Base 
    library provided by Siemens and adopts them to ROS message/service functionality.  
    
  </description>

  <author>Frantisek Durovsky </author>
  <maintainer email="frantisek.durovsky@smartroboticsys.eu">Frantisek Durovsky</maintainer>
  <license>Apache2.0</license>
  
  <url>http://www.ros.org/wiki/siemens_cp1616</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>yaml-cpp</build_depend>   
  <build_depend>std_srvs</build_depend>   
  
  <run_depend>roscpp</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>std_srvs</run_depend>   
  
  
  <export>
    <rosdoc config="rosdoc.yaml" />   
  </export>
</package>
